[package]
name = "merkle-tree"
version = "0.1.0"
edition = "2021"
description = "Merkle trees: construction, proof generation, proof verification, incremental updates"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/merkle-tree"
keywords = ["merkle", "tree", "proof", "hash", "cryptography"]
categories = ["cryptography", "algorithms", "data-structures"]
readme = "README.md"

[dependencies]
